app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
